# proj-ds

./: AGENTS.md  README.md  beamer.tex  plan.md  pyproject.toml
classes/: 2023.md  2024.md  2025.md  clase-1.md  clase-10.md  clase-11.md  clase-12.md  clase-13.md  clase-14.md  clase-15.md  clase-16.md  clase-17.md  clase-2.md  clase-3.md  clase-4.md  clase-5.md  clase-6.md  clase-7.md  clase-8.md  clase-9.md  guias.md  soluciones.md
outputs/models/: best_model.joblib
outputs/tables/: ablation_metrics.csv  forensic_comparison.csv  forensic_metrics.json  forensic_test_predictions.csv  forensic_validation_results.csv  model_metrics.csv  robustness_metrics.csv  summary.json  validation_results.csv
reports/: final_report.md  informe.md
reports/tables/: dataset_particiones.csv  dimensiones_variables.csv  metricas_test.csv  validacion_modelos.csv
scripts/: build_manifest.py  build_report.py  download_data.py  extract_features.py  run_experiments.py  run_forensic_residual_svm.py
src/proj_ds/: __init__.py  dataset.py  features.py  forensic_residual.py  pipeline.py  planned_models.py  report_assets.py  residual_texture.py
