[project]
name = "proj-ds"
version = "0.1.0"
description = "Classical ML project for real-vs-StyleGAN3 face classification."
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
